@@ -310,8 +310,7 @@ public class ModuleTest {
                             if (filenames.length > 0) {
                                 List<String> paths = new ArrayList<String>();
                                 for (String filename : filenames) {
-                                    mLogAdapter.logMessage("Processing "
-                                            + filename, Log.INFO, true);
+                                    mLogAdapter.logMessage("Processing " + filename, Log.INFO, true);
                                     try {
                                         String fullPath = mFilePath + File.separator + filename;
                                         processTestFile(fullPath);
@@ -321,13 +320,10 @@ public class ModuleTest {
                                             paths.add(testErrorsFilename);
                                         }
                                     } catch (Exception e) {
-                                        mLogAdapter
-                                                .logMessage("Parser Failed!!",
-                                                        Log.ERROR, e);
+                                        mLogAdapter.logMessage("Parser Failed!!", Log.ERROR, e);
                                     }
                                 }
-                                mLogAdapter.logMessage("All tests finished",
-                                        Log.INFO, true);
+                                mLogAdapter.logMessage("All tests finished", Log.INFO, true);
 
                                 if (paths.size() > 0) {
                                     sendReportEmail(paths);
@@ -452,8 +448,9 @@ public class ModuleTest {
                                             Logger.e(TAG + " Couldn't parse pause number: " + pauseString);
                                         }
                                     }
-                                    currentTest = new Test(parser.getAttributeValue(null, TEST_NAME_ATTR),
-                                            pause, null);
+                                    String testName = parser.getAttributeValue(null, TEST_NAME_ATTR);
+                                    Logger.d(TAG + " Test '" + testName + "' started");
+                                    currentTest = new Test(testName, pause, null);
                                     expecting.clear();
                                     sResponses.clear();
                                     numIterations = 1;
@@ -1133,7 +1130,7 @@ public class ModuleTest {
                     //                (generateInvalidJSON ? invalidMarshaller : defaultMarshaller);
                     //Logger.d("Current Marshaller:" + currentMarshaller);
 
-                    //Logger.d(TAG + " Send RPC:" + rpc + " appId:" + mAppId);
+                    //Logger.d(TAG + " Send Test RPC:" + rpc.getFunctionName() + " appId:" + mAppId);
                     mProxyService.sendRPCRequestWithPreprocess(mAppId, rpc, currentMarshaller, true);
 
                     long pause = wrapper.getPause();
